feature(register): Add register endpoint
